# gossip-bot

./: .gitignore  .travis.yml  Cargo.toml  README.md  dotenv.env
.github/: dependabot.yml
migrations/2020-08-19-081512_create_gossips/: down.sql  up.sql
migrations/2020-08-19-082236_create_gossipers/: down.sql  up.sql
src/: discord.rs  main.rs
src/storage/: mod.rs  model.rs  repository.rs  schema.rs
